@@ -1,6 +1,9 @@
 from __future__ import absolute_import, unicode_literals
 
+import itertools
+
 from django import template
+from wagtail.wagtailcore import hooks
 
 register = template.Library()
 
@@ -55,3 +58,13 @@ def format_permissions(permission_bound_field):
         'object_perms': object_perms,
         'other_perms': other_perms,
     }
+
+
+@register.inclusion_tag("wagtailadmin/pages/listing/_buttons.html",
+                        takes_context=True)
+def user_listing_buttons(context, user):
+    button_hooks = hooks.get_hooks('register_user_listing_buttons')
+    buttons = sorted(itertools.chain.from_iterable(
+        hook(context, user)
+        for hook in button_hooks))
+    return {'user': user, 'buttons': buttons}
